PA3/cool.output
Nonterminals useless in grammar

    one_plus_expr


Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | error ';'
    4           | class_list class
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID '{' '}' ';'
    8      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    9      | CLASS TYPEID INHERITS TYPEID '{' '}' ';'

   10 feature_list: feature ';'
   11             | error ';'
   12             | feature_list feature ';'
   13             | feature_list error ';'

   14 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID '(' formal_list ')' ':' TYPEID '{' '}'
   16        | OBJECTID '(' ')' ':' TYPEID '{' '}'
   17        | OBJECTID '(' ')' ':' TYPEID '{' expr '}'
   18        | OBJECTID ':' TYPEID opt_assign

   19 formal: OBJECTID ':' TYPEID

   20 formal_list: formal
   21            | formal_list ',' formal

   22 exprs_comma: expr
   23            | exprs_comma ',' expr

   24 exprs_semi: expr ';'
   25           | exprs_semi expr ';'

   26 case: OBJECTID ':' TYPEID DARROW expr ';'

   27 case_list: case
   28          | case_list case

   29 opt_assign: ε
   30           | ASSIGN expr

   31 let_expr: OBJECTID ':' TYPEID opt_assign IN expr
   32         | OBJECTID ':' TYPEID opt_assign ',' let_expr
   33         | error ',' let_expr

   34 expr: OBJECTID ASSIGN expr
   35     | expr '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr '@' TYPEID '.' OBJECTID '(' exprs_comma ')'
   37     | OBJECTID '(' ')'
   38     | OBJECTID '(' exprs_comma ')'
   39     | expr '.' OBJECTID '(' ')'
   40     | expr '.' OBJECTID '(' exprs_comma ')'
   41     | IF expr THEN expr ELSE expr FI
   42     | WHILE expr LOOP expr POOL
   43     | '{' exprs_semi '}'
   44     | '{' '}'
   45     | '{' error '}'
   46     | LET let_expr
   47     | CASE expr OF case_list ESAC
   48     | NEW TYPEID
   49     | ISVOID expr
   50     | expr '+' expr
   51     | expr '-' expr
   52     | expr '*' expr
   53     | expr '/' expr
   54     | '~' expr
   55     | expr '<' expr
   56     | expr LE expr
   57     | expr '=' expr
   58     | NOT expr
   59     | '(' expr ')'
   60     | OBJECTID
   61     | STR_CONST
   62     | INT_CONST
   63     | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14 15 16 17 35 36 37 38 39 40 59
    ')' (41) 14 15 16 17 35 36 37 38 39 40 59
    '*' (42) 52
    '+' (43) 50
    ',' (44) 21 23 32 33
    '-' (45) 51
    '.' (46) 35 36 39 40
    '/' (47) 53
    ':' (58) 14 15 16 17 18 19 26 31 32
    ';' (59) 3 5 6 7 8 9 10 11 12 13 24 25 26
    '<' (60) 55
    '=' (61) 57
    '@' (64) 35 36
    '{' (123) 6 7 8 9 14 15 16 17 43 44 45
    '}' (125) 6 7 8 9 14 15 16 17 43 44 45
    '~' (126) 54
    error (256) 3 5 11 13 33 45
    CLASS (258) 6 7 8 9
    ELSE (259) 41
    FI (260) 41
    IF (261) 41
    IN (262) 31
    INHERITS (263) 8 9
    LET (264) 46
    LOOP (265) 42
    POOL (266) 42
    THEN (267) 41
    WHILE (268) 42
    CASE (269) 47
    ESAC (270) 47
    OF (271) 47
    DARROW (272) 26
    NEW (273) 48
    ISVOID (274) 49
    STR_CONST <symbol> (275) 61
    INT_CONST <symbol> (276) 62
    BOOL_CONST <boolean> (277) 63
    TYPEID <symbol> (278) 6 7 8 9 14 15 16 17 18 19 26 31 32 35 36 48
    OBJECTID <symbol> (279) 14 15 16 17 18 19 26 31 32 34 35 36 37 38 39 40 60
    ASSIGN (280) 30 34
    NOT (281) 58
    LE (282) 56
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4 5
        on right: 1 4 5
    class <class_> (48)
        on left: 6 7 8 9
        on right: 2 4
    feature_list <features> (49)
        on left: 10 11 12 13
        on right: 6 8 12 13
    feature <feature> (50)
        on left: 14 15 16 17 18
        on right: 10 12
    formal <formal> (51)
        on left: 19
        on right: 20 21
    formal_list <formals> (52)
        on left: 20 21
        on right: 14 15 21
    exprs_comma <expressions> (53)
        on left: 22 23
        on right: 23 36 38 40
    exprs_semi <expressions> (54)
        on left: 24 25
        on right: 25 43
    case <case_> (55)
        on left: 26
        on right: 27 28
    case_list <cases> (56)
        on left: 27 28
        on right: 28 47
    opt_assign <expression> (57)
        on left: 29 30
        on right: 18 31 32
    let_expr <expression> (58)
        on left: 31 32 33
        on right: 32 33 46
    expr <expression> (59)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 14 17 22 23 24 25 26 30 31 34 35 36 39 40 41 42 47 49 50 51 52 53 54 55 56 57 58 59


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    3 class_list: error • ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS • TYPEID '{' feature_list '}' ';'
    7      | CLASS • TYPEID '{' '}' ';'
    8      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    9      | CLASS • TYPEID INHERITS TYPEID '{' '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    4 class_list: class_list • class
    5           | class_list • error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    3 class_list: error ';' •

    $default  reduce using rule 3 (class_list)


State 7

    6 class: CLASS TYPEID • '{' feature_list '}' ';'
    7      | CLASS TYPEID • '{' '}' ';'
    8      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'
    9      | CLASS TYPEID • INHERITS TYPEID '{' '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end •

    $default  accept


State 9

    5 class_list: class_list error • ';'

    ';'  shift, and go to state 13


State 10

    4 class_list: class_list class •

    $default  reduce using rule 4 (class_list)


State 11

    8 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'
    9      | CLASS TYPEID INHERITS • TYPEID '{' '}' ';'

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID '{' • feature_list '}' ';'
    7      | CLASS TYPEID '{' • '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature_list  go to state 18
    feature       go to state 19


State 13

    5 class_list: class_list error ';' •

    $default  reduce using rule 5 (class_list)


State 14

    8 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'
    9      | CLASS TYPEID INHERITS TYPEID • '{' '}' ';'

    '{'  shift, and go to state 20


State 15

   11 feature_list: error • ';'

    ';'  shift, and go to state 21


State 16

   14 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID • '(' formal_list ')' ':' TYPEID '{' '}'
   16        | OBJECTID • '(' ')' ':' TYPEID '{' '}'
   17        | OBJECTID • '(' ')' ':' TYPEID '{' expr '}'
   18        | OBJECTID • ':' TYPEID opt_assign

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 17

    7 class: CLASS TYPEID '{' '}' • ';'

    ';'  shift, and go to state 24


State 18

    6 class: CLASS TYPEID '{' feature_list • '}' ';'
   12 feature_list: feature_list • feature ';'
   13             | feature_list • error ';'

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 26

    feature  go to state 27


State 19

   10 feature_list: feature • ';'

    ';'  shift, and go to state 28


State 20

    8 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'
    9      | CLASS TYPEID INHERITS TYPEID '{' • '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 29

    feature_list  go to state 30
    feature       go to state 19


State 21

   11 feature_list: error ';' •

    $default  reduce using rule 11 (feature_list)


State 22

   14 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID '(' • formal_list ')' ':' TYPEID '{' '}'
   16        | OBJECTID '(' • ')' ':' TYPEID '{' '}'
   17        | OBJECTID '(' • ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 31
    ')'       shift, and go to state 32

    formal       go to state 33
    formal_list  go to state 34


State 23

   18 feature: OBJECTID ':' • TYPEID opt_assign

    TYPEID  shift, and go to state 35


State 24

    7 class: CLASS TYPEID '{' '}' ';' •

    $default  reduce using rule 7 (class)


State 25

   13 feature_list: feature_list error • ';'

    ';'  shift, and go to state 36


State 26

    6 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 37


State 27

   12 feature_list: feature_list feature • ';'

    ';'  shift, and go to state 38


State 28

   10 feature_list: feature ';' •

    $default  reduce using rule 10 (feature_list)


State 29

    9 class: CLASS TYPEID INHERITS TYPEID '{' '}' • ';'

    ';'  shift, and go to state 39


State 30

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
   12 feature_list: feature_list • feature ';'
   13             | feature_list • error ';'

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 40

    feature  go to state 27


State 31

   19 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 41


State 32

   16 feature: OBJECTID '(' ')' • ':' TYPEID '{' '}'
   17        | OBJECTID '(' ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 42


State 33

   20 formal_list: formal •

    $default  reduce using rule 20 (formal_list)


State 34

   14 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID '(' formal_list • ')' ':' TYPEID '{' '}'
   21 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 43
    ','  shift, and go to state 44


State 35

   18 feature: OBJECTID ':' TYPEID • opt_assign

    ASSIGN  shift, and go to state 45

    $default  reduce using rule 29 (opt_assign)

    opt_assign  go to state 46


State 36

   13 feature_list: feature_list error ';' •

    $default  reduce using rule 13 (feature_list)


State 37

    6 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 38

   12 feature_list: feature_list feature ';' •

    $default  reduce using rule 12 (feature_list)


State 39

    9 class: CLASS TYPEID INHERITS TYPEID '{' '}' ';' •

    $default  reduce using rule 9 (class)


State 40

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 47


State 41

   19 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 48


State 42

   16 feature: OBJECTID '(' ')' ':' • TYPEID '{' '}'
   17        | OBJECTID '(' ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 49


State 43

   14 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}'
   15        | OBJECTID '(' formal_list ')' • ':' TYPEID '{' '}'

    ':'  shift, and go to state 50


State 44

   21 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 31

    formal  go to state 51


State 45

   30 opt_assign: ASSIGN • expr

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 66


State 46

   18 feature: OBJECTID ':' TYPEID opt_assign •

    $default  reduce using rule 18 (feature)


State 47

    8 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 8 (class)


State 48

   19 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 19 (formal)


State 49

   16 feature: OBJECTID '(' ')' ':' TYPEID • '{' '}'
   17        | OBJECTID '(' ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 67


State 50

   14 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}'
   15        | OBJECTID '(' formal_list ')' ':' • TYPEID '{' '}'

    TYPEID  shift, and go to state 68


State 51

   21 formal_list: formal_list ',' formal •

    $default  reduce using rule 21 (formal_list)


State 52

   41 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 69


State 53

   46 expr: LET • let_expr

    error     shift, and go to state 70
    OBJECTID  shift, and go to state 71

    let_expr  go to state 72


State 54

   42 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 73


State 55

   47 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 74


State 56

   48 expr: NEW • TYPEID

    TYPEID  shift, and go to state 75


State 57

   49 expr: ISVOID • expr

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 76


State 58

   61 expr: STR_CONST •

    $default  reduce using rule 61 (expr)


State 59

   62 expr: INT_CONST •

    $default  reduce using rule 62 (expr)


State 60

   63 expr: BOOL_CONST •

    $default  reduce using rule 63 (expr)


State 61

   34 expr: OBJECTID • ASSIGN expr
   37     | OBJECTID • '(' ')'
   38     | OBJECTID • '(' exprs_comma ')'
   60     | OBJECTID •

    ASSIGN  shift, and go to state 77
    '('     shift, and go to state 78

    $default  reduce using rule 60 (expr)


State 62

   58 expr: NOT • expr

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 79


State 63

   54 expr: '~' • expr

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 80


State 64

   59 expr: '(' • expr ')'

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65

    expr  go to state 81


State 65

   43 expr: '{' • exprs_semi '}'
   44     | '{' • '}'
   45     | '{' • error '}'

    error       shift, and go to state 82
    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65
    '}'         shift, and go to state 83

    exprs_semi  go to state 84
    expr        go to state 85


State 66

   30 opt_assign: ASSIGN expr •
   35 expr: expr • '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' exprs_comma ')'
   39     | expr • '.' OBJECTID '(' ')'
   40     | expr • '.' OBJECTID '(' exprs_comma ')'
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    LE   shift, and go to state 86
    '<'  shift, and go to state 87
    '='  shift, and go to state 88
    '+'  shift, and go to state 89
    '-'  shift, and go to state 90
    '*'  shift, and go to state 91
    '/'  shift, and go to state 92
    '@'  shift, and go to state 93
    '.'  shift, and go to state 94

    $default  reduce using rule 30 (opt_assign)


State 67

   16 feature: OBJECTID '(' ')' ':' TYPEID '{' • '}'
   17        | OBJECTID '(' ')' ':' TYPEID '{' • expr '}'

    IF          shift, and go to state 52
    LET         shift, and go to state 53
    WHILE       shift, and go to state 54
    CASE        shift, and go to state 55
    NEW         shift, and go to state 56
    ISVOID      shift, and go to state 57
    STR_CONST   shift, and go to state 58
    INT_CONST   shift, and go to state 59
    BOOL_CONST  shift, and go to state 60
    OBJECTID    shift, and go to state 61
    NOT         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 64
    '{'         shift, and go to state 65
    '}'         shift, and go to state 95

    expr  go to state 96


State 68

   14 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}'
   15        | OBJECTID '(' formal_list ')' ':' TYPEID • '{' '}'

    '{'  shift, and go to state 97


State 69

   35 expr: expr • '@' TYPEID '.' OBJECTID '(' ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' exprs_comma ')'
   39     | expr • '.' OBJECTID '(' ')'
   40     | expr • '.' OBJECTID '(' exprs_comma ')'
   41     | IF expr • THEN expr ELSE expr FI
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    THEN  shift, and go to state 98
    LE    shift, and go to state 86
    '<'   shift, and go to state 87
    '='   shift, and go to state 88
    '+'   shift, and go to state 89
    '-'   shift, and go to state 90
    '*'   shift, and go to state 91
    '/'   shift, and go to state 92
    '@'   shift, and go to state 93
    '.'   shift, and go to state 94


State 70

   33 let_expr: error • ',' let_expr

    ','  shift, and go to state 99


State 71

   31 let_expr: OBJECTID • ':' TYPEID opt_assign IN expr
   32         | OBJECTID • ':' TYPEID opt_assign ',' let_expr

    ':'  shift, and go to state 100


State 72

   46 expr: LET let_expr •

    $default  reduce using rule 46 (expr)


State 73
